--- a/registro-tipos.html
+++ b/registro-tipos.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -150,7 +151,7 @@
             
             <div class="tipo-card" id="card-idoso" onclick="selecionarTipo('idoso')">
                 <div class="icon">👴</div>
-                <h3>Usuário</h3>
+                <h3>Idoso</h3>
                 <p>Visualize seus medicamentos de forma simples e clara. Interface adaptada e fácil de usar.</p>
             </div>
         </div>
