--- a/editUser.html
+++ b/editUser.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -15,7 +16,7 @@
             margin: 0;
             padding: 0;
             color: #333;
-            background-color: #0072ff; /* Cor sólida */
+            background-color: #0072ff; 
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -30,10 +31,10 @@
             padding: 20px;
             width: 100%;
             text-align: center;
-            background: #00a4e4; /* Tom mais escuro para o cabeçalho */
+            background: #00a4e4; 
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             position: fixed;
-            top: 0; /* Posiciona o título no topo da página */
+            top: 0; 
             left: 0;
             z-index: 1;
         }
@@ -42,7 +43,7 @@
         .container {
             max-width: 600px;
             width: 100%;
-            margin-top: 160px; /* Espaço para compensar o título fixo */
+            margin-top: 160px;
             background-color: white;
             padding: 30px;
             border-radius: 16px;
@@ -71,7 +72,7 @@
 
         input {
             width: 100%;
-            padding: 12px 40px; /* Espaço extra para o ícone */
+            padding: 12px 40px;
             font-size: 16px;
             border: 1px solid #ccc;
             border-radius: 8px;
@@ -83,7 +84,7 @@
         .form-group i {
             position: absolute;
             left: 10px;
-            top: 38px; /* Alinhado com o campo */
+            top: 38px; 
             color: #aaa;
             font-size: 20px;
         }
@@ -112,7 +113,7 @@
         }
 
         .btn-cancel {
-            background-color: #e74c3c; /* Vermelho */
+            background-color: #e74c3c; 
             color: white;
             margin-right: 10px;
         }
@@ -122,24 +123,24 @@
         }
 
         .btn-confirm {
-            background-color: #00bfff; /* Azul claro */
+            background-color: #00bfff; 
             color: white;
         }
 
         .btn-confirm:hover {
-            background-color: #0072ff; /* Azul mais escuro */
+            background-color: #0072ff; 
         }
 
         .btn-back {
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background-color: #00bfff; /* Azul claro */
+            background-color: #00bfff; 
             color: white;
         }
 
         .btn-back:hover {
-            background-color: #0072ff; /* Azul mais escuro */
+            background-color: #0072ff; 
         }
 
         /* Estilo da mensagem de erro */
@@ -178,7 +179,7 @@
         }
     </style>
 
-    <!-- Adicionando uma biblioteca de ícones como o Font Awesome para os ícones -->
+    <!-- Adicionando uma biblioteca de ícones -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -225,18 +226,18 @@
                 <input type="password" id="senha" name="senha" placeholder="Digite sua senha">
             </div>
 
-            <!-- Campo Confirmar Senha com ícone -->
+            <!-- Campo Confirmar Senha -->
             <div class="form-group">
                 <label for="confirmar-senha">Confirmar Senha</label>
                 <i class="fas fa-lock"></i>
                 <input type="password" id="confirmar-senha" name="confirmar-senha" placeholder="Confirme sua senha">
             </div>
 
-            <!-- Mensagem de erro -->
+            <!-- Mensagem de erro de senha -->
             <div class="error-message" id="error-message">As senhas não coincidem!</div>
             <div class="error-message" id="same-password-message">A nova senha não pode ser igual à senha atual!</div>
 
-            <!-- Botões de Ação -->
+            <!-- Botões de Ação cancelar e confirmar -->
             <div class="buttons">
                 <button type="button" class="btn-cancel" id="btnCancelar">Cancelar</button>
                 <button type="submit" class="btn-confirm">Confirmar</button>
@@ -244,12 +245,11 @@
         </form>
     </div>
 
-    <!-- Botão Voltar no canto inferior direito -->
     <button class="btn-back" id="btnVoltar">Voltar à Página Inicial</button>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
-        import { getAuth, onAuthStateChanged, updateEmail, updatePassword } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js";
+        import { getAuth, onAuthStateChanged, updateEmail, updatePassword, reauthenticateWithCredential, EmailAuthProvider } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js";
         import { getFirestore, doc, getDoc, updateDoc } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js";
 
         const firebaseConfig = {
@@ -345,14 +345,43 @@
             try {
                 // Atualizar email se foi alterado
                 if (user && email !== user.email) {
-                    await updateEmail(user, email);
-                    console.log("E-mail atualizado com sucesso.");
+                        try {
+                            await updateEmail(user, email);
+                            console.log("E-mail atualizado com sucesso.");
+                        } catch (err) {
+                            if (err && err.code === 'auth/requires-recent-login') {
+                                // tentar reautenticar e refazer a operação
+                                const reauthOk = await reauthenticateWithPrompt(user);
+                                if (reauthOk) {
+                                    await updateEmail(user, email);
+                                    console.log("E-mail atualizado com sucesso após reautenticação.");
+                                } else {
+                                    throw new Error('Reautenticação necessária para alterar e-mail.');
+                                }
+                            } else {
+                                throw err;
+                            }
+                        }
                 }
 
                 // Atualizar senha se foi preenchida
                 if (user && senha) {
-                    await updatePassword(user, senha);
-                    console.log("Senha atualizada com sucesso.");
+                    try {
+                        await updatePassword(user, senha);
+                        console.log("Senha atualizada com sucesso.");
+                    } catch (err) {
+                        if (err && err.code === 'auth/requires-recent-login') {
+                            const reauthOk = await reauthenticateWithPrompt(user);
+                            if (reauthOk) {
+                                await updatePassword(user, senha);
+                                console.log("Senha atualizada com sucesso após reautenticação.");
+                            } else {
+                                throw new Error('Reautenticação necessária para alterar senha.');
+                            }
+                        } else {
+                            throw err;
+                        }
+                    }
                 }
 
                 // Preparar dados para atualização
@@ -388,6 +417,28 @@
             } catch (error) {
                 console.error("Erro ao atualizar dados:", error);
                 alert('Erro ao atualizar dados: ' + error.message);
+            }
+        }
+
+        async function reauthenticateWithPrompt(user) {
+            try {
+                if (!user || !user.providerData || user.providerData.length === 0) return false;
+                const providers = user.providerData.map(p => p.providerId);
+                if (!providers.includes('password')) {
+                    alert('Sua conta usa login externo. Por favor, faça logout e entre novamente para alterar credenciais.');
+                    return false;
+                }
+
+                const currentPassword = prompt('Por favor, insira sua senha atual para confirmar alterações sensíveis:');
+                if (!currentPassword) return false;
+
+                const credential = EmailAuthProvider.credential(user.email, currentPassword);
+                await reauthenticateWithCredential(user, credential);
+                return true;
+            } catch (err) {
+                console.error('Reautenticação falhou:', err);
+                alert('Reautenticação falhou. Por favor, tente fazer login novamente.');
+                return false;
             }
         }
 
